correct table overflow

--- a/src/app/components/banking/bank-details/bank-details.component.scss
+++ b/src/app/components/banking/bank-details/bank-details.component.scss
@@ -1,7 +1,3 @@
 .cursorPointer {
     cursor: pointer;
 }
-
-th, td {
-    max-width: 25%;
-}
